Animal expansion: Now user can add Animal in cage as well as change it's cage.Added service for Cage.Table for Animals Expanded to support displaying of Cage.Code.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -266,5 +266,10 @@ img {
 }
 
 
+.no-cage { 
+  border: 2px solid red; // ivice celog reda 
+  background-color: #ffe5e5; // blago crvena pozadina za još jači efekat 
+}
+
 
 
